k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lazynext
  labels:
    name: lazynext
    environment: production
